finish fix few mstks